--- a/index.html
+++ b/index.html
@@ -1,11 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Formulario</title>
 </head>
+
 <body>
-    
+    <h1>bootstrap</h1>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Acerca de</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Categorias
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Pizzas</a></li>
+                            <li><a class="dropdown-item" href="#">Empanadas</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Bebidas</a></li>
+                        </ul>
+                    </li>
+
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <div id="carouselExampleFade" class="carousel slide carousel-fade mb-5">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://images.pexels.com/photos/3376610/pexels-photo-3376610.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://images.pexels.com/photos/3098796/pexels-photo-3098796.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://images.pexels.com/photos/3832407/pexels-photo-3832407.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <div class="container mb-5">
+        <h5>Login</h5>
+        <div class="form-floating mb-3 ">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
+            <div class="mt-3">
+                <label for="customRange2" class="form-label">Example range</label>
+                <input type="range" class="form-range" min="0" max="5" id="customRange2">
+            </div>
+            <div class="container">
+                <select class="form-select text-center mb-3 mt-3 " aria-label="Default select example">
+                    <option selected>Seleccionar cantidad</option>
+                    <option value="1">Uno</option>
+                    <option value="2">Dos</option>
+                    <option value="3">Tres</option>
+                </select>
+            </div>
+
+            <button class="btn btn-success mt-3" type="submit">Enviar</button>
+        </div>
+    </div>
+
+    <div class="container text-center mb-3 table">
+        <h5>Container</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-sm text-center mb-3 table">
+        <h5>Container-sm</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-md text-center mb-3 table">
+        <h5>Container-md</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-lg text-center mb-3 table">
+        <h5>Container-lg</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-xl text-center mb-3 table">
+        <h5>Container-xl</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-xxl text-center mb-3 table">
+        <h5>Container-xxl</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <div class="container-fluid text-center mb-3 table">
+        <h5>Container-fluid</h5>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-4">Bloque 2</div>
+            <div class="col-sm-12 col-lg-4">Bloque 3</div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
